# crayon

./: .gitignore  Cargo.toml  README.md
content_generator/: Cargo.toml
content_generator/assets/: styles.css
content_generator/assets/js/: interactive.js
content_generator/content/: home.yaml  interactive.yaml  resume.yaml
content_generator/src/: constant.rs  main.rs  model.rs  parameter.rs  templates.rs
content_generator/templates/: js-libraries.template  page.template
crayon/: Cargo.toml
crayon/resources/: interactive.html  styles.css
crayon/src/: main.rs  parameter.rs  server.rs
resources/: index.html  interactive.html  styles.css
resources/js/: interactive.js  model.js
src/: constant.rs  main.rs  parameter.rs  server.rs
