[package]
name = "crayon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
blarg = "0.1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7.4", features = ["io"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
